Completed Building Homepage

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "optional": "^0.1.4",
     "pnpm": "^9.15.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "sharp": "^0.33.5",
