--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "link-preview-js": "^3.0.12",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "optional": "^0.1.4",
